--- a/service/serverless.yml
+++ b/service/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: bxb-data-service
+  name: tom-game-off-service
   publish: false
 
 provider:
@@ -7,7 +7,16 @@ provider:
   runtime: nodejs10.x
   stage: ${opt:stage, 'development'}
   region: ${opt:region, 'eu-west-1'}
-  timeout: 60 #default timeout for all handlers
+  profile: ${opt:aws-profile, 'mable_dev'}
+  timeout: 30 #default timeout for all handlers
+
+package:
+  individually: true
+
+custom:
+  webpack:
+    webpackConfig: ./webpack.config.js
+    includeModules: true
 
 plugins:
   - serverless-webpack
@@ -15,5 +24,13 @@ plugins:
   - serverless-pseudo-parameters
 
 functions:
-  first:
-    handler: first.hello
+  mqttUrl:
+    handler: handlers/MqttUrl.run
+    environment:
+      SECRET: ${opt:secret, 'shhhh'}
+      KEY: ${opt:key, 'keykey'}
+    events:
+      - http:
+          path: game/connection
+          method: get
+
