--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "mqtt": "^3.0.0",
     "p5": "^0.9.0",
     "phaser": "^3.0.0",
     "webfontloader": "^1.6.28"
